--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,2 +1,10 @@
-$main: #272727;
-$secondary: #FDFDFD;
+$blue-light: #859fff;
+$blue: #5276f5;
+$blue-dark: #2743a8;
+
+$orange-light: #fcd2aa;
+$orange: #ff9f45;
+$orange-dark: #cf690a;
+
+$main: $blue-dark;
+$secondary: $blue-light;
